<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Select a genre from the following: "
        android:textSize="25dp"
        android:textColor="@color/black"
        android:fontFamily="sans-serif-condensed"></TextView>

    <Button
        android:id="@+id/computer_science_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/computer_science"></Button>

    <Button
        android:id="@+id/self_help_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/self_help"></Button>

    <Button
        android:id="@+id/historical_fantasy_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/historical_fantasy"></Button>


</LinearLayout>